[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recruit-station-backend"
version = "0.1.0"
description = "FastAPI backend foundation for the RecruitStation workspace"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "pypdf>=5.0.0",
  "python-docx>=1.1.0",
  "sqlalchemy>=2.0.30",
  "uvicorn>=0.30.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
]

[project.scripts]
recruit-station-backend = "recruit_station.core.app:main"
recruit-station-migrate = "recruit_station.db.migrations:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["recruit_station*"]
namespaces = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
